feat(dashboard): ajout de la card "Gestion des versions"

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -6,6 +6,13 @@ Show all: Voir tout
 User List: Liste des utilisateurs
 Page List: Liste des pages
 
+## Dashboard
+Version Management: Gestion des versions
+PHP: PHP
+Symfony: Symfony
+End of maintenance: Fin de maintenance
+End of life: Fin de vie
+
 ## CRUD
 ID: ID
 
