--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -7,6 +7,7 @@ User List: Liste des utilisateurs
 Page List: Liste des pages
 
 ## Dashboard
+Server Informations: Informations du serveur
 Version Management: Gestion des versions
 PHP: PHP
 Symfony: Symfony
