feat(service): gestion des médias

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -6,6 +6,7 @@ Show all: Voir tout
 User List: Liste des utilisateurs
 Page List: Liste des pages
 Media List: Liste des médias
+Media Management: Gestion des médias
 Service List: Liste des services
 
 ## Dashboard
