--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -8,6 +8,7 @@ Page List: Liste des pages
 Media List: Liste des médias
 Media Management: Gestion des médias
 Service List: Liste des services
+Gallery List: Liste des galeries
 
 ## Dashboard
 Server Informations: Informations du serveur
@@ -26,6 +27,10 @@ Page: Page
 Pages: Pages
 Service: Service
 Services: Services
+Media: Media
+Medias: Medias
+Gallery: Galerie
+Galleries: Galeries
 
 Name: Nom
 Firstname: Prénom
@@ -35,7 +40,6 @@ Is Admin: Est administrateur
 Content: Contenu
 Title: Titre
 Body: Contenu
-Media: Media
 Binary Content: Fichier
 Icon: Icône
 Description: Description
