--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -9,6 +9,8 @@ Media List: Liste des médias
 Media Management: Gestion des médias
 Service List: Liste des services
 Gallery List: Liste des galeries
+Parameters: Paramètres
+Main Parameters: Paramètres principaux
 
 ## Dashboard
 Server Informations: Informations du serveur
@@ -17,6 +19,7 @@ PHP: PHP
 Symfony: Symfony
 End of maintenance: Fin de maintenance
 End of life: Fin de vie
+Save: Sauvegarder
 
 ## CRUD
 ID: ID
@@ -44,5 +47,11 @@ Binary Content: Fichier
 Icon: Icône
 Description: Description
 
+Home gallery: Galerie d'accueil
+
+## Flash Message
+Successfully saved parameters: Paramètres sauvegardés avec succès
+
 ## Help
 Icon name from http://fontawesome.com: Nom de l'icône sur <a href="https://fontawesome.com/search?m=free" target="_blank">fontawesome.com</a>
+Select gallery for homepage ...: Sélectionnez la galerie pour la page d'accueil...
