feat(topbar): enregistrement des paramètres de la topbar

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -7,6 +7,11 @@ Home jumbotron title image: Image "titre" du jumbotron
 Remove home jumbotron title image: Supprimer l'image "titre" du jumbotron
 Home jumbotron title: Titre du jumbotron
 Home jumbotron subtitle: Sous-titre du jumbotron
+Topbar: Barre de navigation
+Topbar Parameters: Paramètres de la barre de navigation
+Topbar logo: Logo de la barre de navigation
+Remove topbar logo: Supprimer le logo de la barre de navigation
+Topbar title: Titre de la barre de navigation
 Subject: Sujet
 Email: Email
 Phone: Téléphone
